--- a/public/scss/pages/_dashboard.scss
+++ b/public/scss/pages/_dashboard.scss
@@ -204,6 +204,7 @@ $light-blue: #0971ce;
       grid-template-columns: 50% 50%;
       padding: 5px;
       .favorite{
+        width: 95%;
         .add-info{
           height: 225px;
           padding: 0 5px;
